# docs/api/swagger.yaml
@@ -11,7 +11,7 @@ info:
         url: 'https://opensource.org/licenses/MIT'
 servers:
     -
-        url: 'http://localhost:3000/api/v1'
+        url: 'http://localhost:5000/api/v1'
         description: 'Servidor local de desenvolvimento'
     -
         url: 'https://fortressguard.orrender.app/api/v1'
@@ -96,6 +96,28 @@ paths:
                     content: {application/json: {schema: {type: object, properties: {success: {type: boolean, example: true}, data: {type: object, properties: {encryptedText: {type: string, example: 'iv-12345:AABCDEF123456789'}, originalLength: {type: integer, example: 12}, encryptedLength: {type: integer, example: 32}, timestamp: {type: string, format: date-time}}}}}}}
                 '400':
                     description: 'Parâmetros inválidos'
+                '429':
+                    description: 'Limite de requisições excedido'
+                '500':
+                    description: 'Erro interno do servidor'
+    /decrypt-text:
+        get:
+            tags:
+                - Encryption
+            summary: 'Descriptografa um texto fornecido'
+            parameters:
+                -
+                    name: encryptedText
+                    in: query
+                    schema: {type: string}
+                    description: 'Texto criptografado a ser descriptografado'
+                    required: true
+            responses:
+                '200':
+                    description: 'Texto descriptografado com sucesso'
+                    content: {application/json: {schema: {type: object, properties: {success: {type: boolean, example: true}, data: {type: object, properties: {decryptedText: {type: string, example: 'Texto original'}, length: {type: integer, example: 13}, timestamp: {type: string, format: date-time}}}}}}}
+                '400':
+                    description: 'Parâmetros inválidos ou formato incompatível'
                 '429':
                     description: 'Limite de requisições excedido'
                 '500':
